# lan-chat

./: Cargo.toml  README.md  rustfmt.toml
research/: debug-codes.md  match-guard.md  mdns.md
src/: advertise.rs  advertise_async.rs  config.rs  discovery.rs  lib.rs  main.rs  peer.rs  utils.rs
src/config/: constants.rs
src/networking/: advertise.rs  discovery.rs  mod.rs  utils.rs
src/peer/: connection.rs  conversion.rs  event.rs  events.rs  health.rs  identity.rs  info.rs  manager.rs  map.rs  metadata.rs  mod.rs  notifier.rs
src/utils/: helpers.rs  logger.rs  mod.rs
src/ws/: event.rs  helpers.rs  manager.rs  mod.rs
