[package]
name = "lan-chat"
version = "0.3.1"
edition = "2024"

[dependencies]
tokio = { version = "1.45.1", features = ["full"] }
tokio-tungstenite = "0.27.0"
tungstenite = "0.27.0"
futures = "0.3"
anyhow = "1.0.98"
uuid = { version = "1.17.0", features = ["v4", "serde"] }
whoami = "1.6.0"
warp = "0.3.7"
futures-util = "0.3.31"
url = "2.5.4"
libmdns = "0.9"
mdns = "3.0.0"
env_logger = "0.11"
log= "0.4"
hostname = "0.4.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
chrono = { version = "0.4.41", features = ["serde"] }
dirs = "6.0.0"

[features]
default = []
disable-logs = []
